--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 
   <!-- Scripts -->
   <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/app.js"></script>
   
 </body>
